@@ -55,7 +55,7 @@
         <dependency>
             <groupId>org.python</groupId>
             <artifactId>jython-standalone</artifactId>
-            <version>2.7.1b3</version>
+            <version>2.7.1-rc3</version>
         </dependency>
         <dependency>
             <groupId>org.netxms</groupId>
